<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    tools:context=".ui.topic_view.TopicListActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topic_title"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/topics"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/topic_create_input"
                android:layout_width="448dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="New Topic"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#A1887F" />

            <Space
                android:layout_width="30dp"
                android:layout_height="53dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/topic_create_btn"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="48dp"
                android:onClick="create_topic"
                android:text="Create" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topic_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:isScrollContainer="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>