<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="back_to_topics"
    tools:context=".ui.discussion_view.DiscussionListActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back_to_topics"
            android:text="BACK TO TOPICS"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/discussion_topic_title"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/topics"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="Topic Discussion" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="new_discussion"
            android:text="New Discussion" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discussion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>