...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/comment_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Say something about this post..."
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_comment_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="create_comment"
                android:text="Post Comment" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comments"
            android:textSize="24dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
