...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/discussion_title_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Discussion title"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
...
            android:ems="10"
            android:gravity="start|top"
            android:hint="Discussion content"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="create_discussion"
            android:text="Create" />

    </LinearLayout>
...
